floating urban blocks images and styling started

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -124,97 +124,56 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="regina" src="../assets/img/floatingblocks15/regina.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Regina Madanguit</h7>
                         </a>
                         <p>Project Lead</p>
-                        <p>Senior | Economics</p>
                     </div>
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="aryan" src="../assets/img/floatingblocks15/aryan.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Aryan Nair</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>Material Analysis</p>
                     </div>
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="joey" src="../assets/img/floatingblocks15/joey.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Joey Besgen</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>Material Analysis</p>
                     </div>
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="jamesz" src="../assets/img/floatingblocks15/jamesz.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>James Zamora</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>User Research</p>
                     </div>
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="ariel" src="../assets/img/floatingblocks15/ariel.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Ariel Chen</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
-                    </div>
-                </div>
-                <div class = "col-4 col-sm-3 col-md-2">
-                    <div class="blob">
-                        <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
-                        </div>
-                        </a>
-                        <h7>Kaylan Huang</h7>
-                        </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
-                    </div>
-                </div>
-                <div class = "col-4 col-sm-3 col-md-2">
-                    <div class="blob">
-                        <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
-                        </div>
-                        </a>
-                        <h7>Kaylan Huang</h7>
-                        </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
-                    </div>
-                </div>
-                <div class = "col-4 col-sm-3 col-md-2">
-                    <div class="blob">
-                        <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
-                        </div>
-                        </a>
-                        <h7>Kaylan Huang</h7>
-                        </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>User Research</p>
                     </div>
                 </div>
             </div>
@@ -226,25 +185,23 @@
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="kristina" src="../assets/img/floatingblocks15/kristina.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Kristina Hill</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>Professor, Landscape Architecture</p>
                     </div>   
                 </div>
                 <div class = "col-4 col-sm-3 col-md-2">
                     <div class="blob">
                         <div class = "img-container">
-                            <img alt="template" src="../assets/img/alemany/people/kaylan.svg" alt="template" class = "member"/>
+                            <img alt="nate" src="../assets/img/floatingblocks15/nate.svg" class = "member"/>
                         </div>
                         </a>
-                        <h7>Kaylan Huang</h7>
+                        <h7>Nate Kauffman</h7>
                         </a>
-                        <p>Project Lead</p>
-                        <p>Senior | Economics</p>
+                        <p>PhD Candidate, Landscape Architecture</p>
                     </div>   
                 </div>
             </div>
@@ -275,23 +232,25 @@
             world.</p>
 
             <div class="row">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-4">
                     <div class="sectionheader">
-                        <h3>Who is user?</h3>
-                        <div id=underline1></div>
+                        <h3>Who is our user?</h3>
+                        <div id=underline3></div>
                     </div>
-                    <img src="../assets/img/users.svg" id="users">
+                    <div> <img src="../assets/img/users.svg" id="users"> </div>
+                    <div class="user-txt"> <h7 class="user"> Bay Area residents</h7>
+                    <p>who reside in homes around sea level and near the coastline</p> </div>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-8">
                     <div class="sectionheader">
                         <h3>Our users need...</h3>
-                        <div id=underline1></div>
+                        <div id=underline4></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>Houses that are functional and
+                    <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>Houses that are functional and
                         environmentally adaptable, while still feeling like homes.</h7>
-                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A cohesive community that
+                    <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>A cohesive community that
                         contains shared public spaces where residents can interact with each other.</h7>
-                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>A thoughtful design for a
+                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="bubbles1"></span>A thoughtful design for a
                         community block that is safe, secure, and adaptable to rising sea levels.</h7>
                 </div>
             </div>
@@ -308,10 +267,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>Deliverable 1 More Text <span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                        <h3>Residence Designs<span><img src="../assets/img/floatingblocks15/initials-1.svg" class="bubbles1"></span></h3>
                         <div id=underline5></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
+                    <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>How might we create a sustainable structure for individual homes that are adaptable to rising sea levels?
                     </h7>
                     <div class="container">
                         <p class="p1">We began by researching existing floating communities to determine the architectural requirements of a floating
@@ -325,7 +284,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6">
-                <img src="../assets/img/netic/colors.png" class="topbar-img">
+                <img src="../assets/img/floatingblocks15/floating-deliv-1.png" class="topbar-img">
             </div>
         <!-- </div>
         <div class="row"> -->
@@ -358,10 +317,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>Deliverable 3<span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                        <h3>Deliverable 3<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles1"></span></h3>
                         <div id=underline7></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
+                    <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
                     communicate our community designs?</h7>
                     <div class="container">
                         <p class="p2">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
@@ -382,7 +341,7 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6">
-                <img src="../assets/img/netic/colors.png" class="topbar-img">
+                <img src="../assets/img/floatingblocks15/floating-deliv-2.png" class="topbar-img">
             </div>
         <!-- </div>
         <div class="row"> -->
