vs code live share floating blocks

--- a/v1.5/floatingblocks15.html
+++ b/v1.5/floatingblocks15.html
@@ -69,8 +69,8 @@
     <div class="topbar">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-6">
-                    <img src="../assets/img/netic/colors.png" class="topbar-img">
+                <div class="col-12 col-sm-6 d-flex justify-content-center">
+                    <img src="../assets/img/floatingblocks15/floating-landing.svg" class="topbar-img">
                 </div>
                 <div class="col-12 col-sm-6">
                     <h1 id="proj-title">floating urban blocks</h1>
@@ -82,7 +82,7 @@
                             <h4 id="proj-details">Duration</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Feb 2020 - May 2020</h6>
+                            <h6 id="proj-answers">Sept 2017 - Dec 2017</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -90,7 +90,7 @@
                             <h4 id="proj-details">Focus</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Health, Society, Public Health, Accessibility</h6>
+                            <h6 id="proj-answers">Environmental Issues</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -98,7 +98,7 @@
                             <h4 id="proj-details">Tools</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Figma, Adobe Illustrator, TensorFlow, Python</h6>
+                            <h6 id="proj-answers">Rapid Prototyping, CAD</h6>
                         </div>
                     </div>
                     <div class="row details">
@@ -106,7 +106,7 @@
                             <h4 id="proj-details">Partner</h4>
                         </div>
                         <div class="col-8">
-                            <h6 id="proj-answers">Netic Health</h6>
+                            <h6 id="proj-answers">Kristina Hill, Nate Kauffman</h6>
                         </div>
                     </div>
                     </div>
@@ -218,7 +218,7 @@
                 <h3>Our partner</h3>
                 <div id=underline1></div>
             </div>
-            <p>Resilient by Design is a collaborative research and design project that brings designers and experts together to develop
+            <p><a href="http://www.resilientbayarea.org/" target="_blank" class="partner-link">Resilient by Design</a> is a collaborative research and design project that brings designers and experts together to develop
             innovative solutions to climate change issues. Professor Kristina Hill specializes in urban ecology in relation to
             architectural design and social justice. Nate Kauffman is a PhD candidate studying landscape architecture and
             environmental planning.</p>
@@ -246,12 +246,25 @@
                         <h3>Our users need...</h3>
                         <div id=underline4></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>Houses that are functional and
+                    <row>
+                    <div class="col-4"> <img src="../assets/img/number-1.svg" class="bubbles1"> </div>
+                    <div class="col-8"> <h7 id="how">Houses that are functional and environmentally adaptable, while still feeling like homes.</h7></div>
+                    </row>
+                    <row>
+                        <div class="col-4"> <img src="../assets/img/number-1.svg" class="bubbles1"> </div>
+                        <div class="col-8"> <h7 id="how">A cohesive community that contains shared public spaces where residents can interact with each other.</h7></div>
+                    </row>
+                    <row>
+                        <div class="col-4"> <img src="../assets/img/number-1.svg" class="bubbles1"> </div>
+                        <div class="col-8"> <h7 id="how">A thoughtful design for community block that is safe, secure, and adaptable to rising sea levels.</h7></div>
+                    </row>
+
+                    <!-- <h7 id="how"><span><img src="../assets/img/number-1.svg" class="bubbles1"></span>Houses that are functional and
                         environmentally adaptable, while still feeling like homes.</h7>
                     <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>A cohesive community that
                         contains shared public spaces where residents can interact with each other.</h7>
                     <h7 id="how"><span><img src="../assets/img/number-3.svg" class="bubbles1"></span>A thoughtful design for a
-                        community block that is safe, secure, and adaptable to rising sea levels.</h7>
+                        community block that is safe, secure, and adaptable to rising sea levels.</h7> -->
                 </div>
             </div>
         </div>
@@ -283,20 +296,20 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-sm-6">
-                <img src="../assets/img/floatingblocks15/floating-deliv-1.png" class="topbar-img">
+            <div class="col-12 col-sm-6 d-flex justify-content-center">
+                <img src="../assets/img/floatingblocks15/floating-deliv-1.png" class="deliverable-img">
             </div>
         <!-- </div>
         <div class="row"> -->
             <div class="col-12 col-sm-6">
-                <img src="../assets/img/netic/colors.png" class="topbar-img">
+                <img src="../assets/img/floatingblocks15/floating-deliv-2.png" class="deliverable-img">>
             </div>
             <div class="col-12 col-sm-6">
                 <div class="sectionheader">
-                    <h3>Deliverable 2<span><img src="../assets/img/netic/bubbles1.svg" class="bubbles1"></span></h3>
+                    <h3>Community Layout<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles1"></span></h3>
                     <div id=underline6></div>
                 </div>
-                <h7 id="how"><span><img src="../assets/img/netic/1.svg" class="bubbles1"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
+                <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>How might we make a group of floating homes feel like a community, to maintain an interactive public environment while
                 being environmentally conscious?</h7>
                 <div class="container">
                     <p id="p4">Our goal was to create a housing layout that reflected a community rather than just individual homes. We tested various
@@ -305,8 +318,6 @@
                     <br>
                     For each layout, we gathered user feedback from Bay Area residents about its potential liveability to gain more insight
                     into how individuals might interact within each community design.</p>
-                    <br>
-                    <br>
                     <p id="p5">Based on our feedback analysis, we ultimately chose a layout with houses arranged around the edges of the block, with a
                     common area in the center of the arrangement. This formation allows for a more protected and cohesive community feel,
                     with space for a public area such as a community center or park.</p>
@@ -317,10 +328,10 @@
             <div class="col-12 col-sm-6">
                 <div class="container">
                     <div class="sectionheader">
-                        <h3>Deliverable 3<span><img src="../assets/img/floatingblocks15/initials-2.svg" class="bubbles1"></span></h3>
+                        <h3>3D Model Fabrication<span><img src="../assets/img/floatingblocks15/initials-3.svg" class="bubbles1"></span></h3>
                         <div id=underline7></div>
                     </div>
-                    <h7 id="how"><span><img src="../assets/img/number-2.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
+                    <h7 id="how"><span><img src="../assets/img/number-3.svg" class="bubbles1"></span>How might we develop a three-dimensional model of a floating urban block that is long-lasting and functions to
                     communicate our community designs?</h7>
                     <div class="container">
                         <p class="p2">After deciding on the layout for the houses, we created a model for the entire system. Our purpose was to create a
@@ -341,15 +352,12 @@
                 </div>
             </div>
             <div class="col-12 col-sm-6">
-                <img src="../assets/img/floatingblocks15/floating-deliv-2.png" class="topbar-img">
+                <img src="../assets/img/floatingblocks15/floating-deliv-3.png" class="deliverable-img">
             </div>
         <!-- </div>
         <div class="row"> -->
         </div>
     </div>
-
-
-
 
     <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
