linked new project pages to landing and projects gallery

--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -90,7 +90,7 @@
             <div class="row">
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
-                <a href="projects/alemany-farms.html">
+                <a href="../v1.5/alemany15.html">
                     <img src="../assets/img/projthumbnails/newalemany.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%" alt="Alemany Farm">
                 </a>
                 <br>
@@ -105,95 +105,95 @@
               </div>
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
-                <a href="projects/communitycafe.html">
-                    <img src="../assets/img/projthumbnails/newnetic.svg" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                <a href="../v1.5/netic15.html">
+                    <img src="../assets/img/projthumbnails/newnetic.svg" class="project-tile" alt="Netic Health" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                 </a>
                 </div>
               </div>
               <div class="col-6 col-sm-4" style="text-align: center">
                 <div style="padding-bottom: 10%;">
-                <a href="projects/netic.html">
-                    <img src="../assets/img/projthumbnails/newcc.svg" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                <a href="../v1.5/commcafe15.html">
+                    <img src="../assets/img/projthumbnails/newcc.svg" class="project-tile" alt="Community Cafe" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                 </a>
                 </div>
               </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/berkeley-student-food-collective.html">
+                    <a href="../v1.5/makerspace15.html">
                         <img src="../assets/img/projthumbnails/moffmake.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
-                        alt="Berkeley Student Food Collective">
+                        alt="Moffitt Makerspace">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/newgs.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/groupsource15.html">
+                        <img src="../assets/img/projthumbnails/newgs.svg" class="project-tile" alt="Groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/newbsfc.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/bsfc15.html">
+                        <img src="../assets/img/projthumbnails/newbsfc.svg" class="project-tile" alt="Berkeley Student Food Collective" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/berkeley-student-food-collective.html">
+                    <a href="../v1.5/thrive15.html">
                         <img src="../assets/img/projthumbnails/thrive.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
-                        alt="Berkeley Student Food Collective">
+                        alt="Thrive Networks">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/about.html">
+                        <img src="../assets/img/projthumbnails/visualize.svg" class="project-tile" alt="Visualize in Ghana" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/hofmann.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/hofmann15.html">
+                        <img src="../assets/img/projthumbnails/hofmann.svg" class="project-tile" alt="Nature of Appstraction" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/berkeley-student-food-collective.html">
+                    <a href="../v1.5/floatingblocks15.html">
                         <img src="../assets/img/projthumbnails/fub.svg" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;"
-                        alt="Berkeley Student Food Collective">
+                        alt="Floating Urban Blocks">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/makerspace.html">
-                        <img src="../assets/img/projthumbnails/concha.svg" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/concha15.html">
+                        <img src="../assets/img/projthumbnails/concha.svg" class="project-tile" alt="Concha Labs" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    </a>
+                    </div>
+                </div>
+                <!-- <div class="col-6 col-sm-4" style="text-align: center">
+                    <div style="padding-bottom: 10%;">
+                    <a href="../v1.5/kineticmath15">
+                        <img src="../assets/img/projthumbnails/kinetic.svg" class="project-tile" alt="Kinetic Math" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/kinetic.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/designforjustice15">
+                        <img src="../assets/img/projthumbnails/d4j.svg" class="project-tile" alt="Design for Justice" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-6 col-sm-4" style="text-align: center">
                     <div style="padding-bottom: 10%;">
-                    <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/d4j.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
-                    </a>
-                    </div>
-                </div>
-                <div class="col-6 col-sm-4" style="text-align: center">
-                    <div style="padding-bottom: 10%;">
-                    <a href="projects/groupsource.html">
-                        <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
+                    <a href="../v1.5/about.html">
+                        <img src="../assets/img/projthumbnails/catheter.svg" class="project-tile" alt="Brain-Saving Catheter" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 70%; height:100%;">
                     </a>
                     </div>
                 </div>
