--- a/indexv15.html
+++ b/indexv15.html
@@ -122,19 +122,19 @@
             <div class="container projects-div">
                 <div class="row">
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/alemany15.html">
                             <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
                         </a>
                     </div>
                     <div class="col-4 space">
                     </div>  
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/groupsource15.html">
                             <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
                         </a>
                     </div>  
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/makerspace15.html">
                             <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
                         </a>
                     </div>
@@ -144,19 +144,19 @@
                         </div>
                     </div>
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/netic15.html">
                             <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
                         </a>
                     </div>  
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/bsfc15.html">
                             <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                         </a>
                     </div>
                     <div class="col-4 space">
                     </div>  
                     <div class="col-4 d-flex justify-content-center">
-                        <a href="v1.5/projects.html">
+                        <a href="v1.5/commcafe15.html">
                             <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
                         </a>
                     </div>
