mainscroll button styling

--- a/indexv15.html
+++ b/indexv15.html
@@ -64,10 +64,10 @@
 
         <!-- Background Images-->
         <div class = "clouds">
-            <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2b.png">
+            <img class="scene" data-modifier="55" src="assets/img/mainscrollv15/scroll-level-2b.png">
         </div>
         <div class = "planets">
-            <img class="planets-img" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2c.png">
+            <img class="scene" data-modifier="5" src="assets/img/mainscrollv15/bottom-planets.png">
         </div>
 
         <!-- Landing Section -->
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class = "img-container">
-                <img class="scene" data-modifier="45" src="assets/img/mainscrollv15/scroll-level-2a.png">
+                <img class="scene" data-modifier="75" src="assets/img/mainscrollv15/scroll-level-2a.png">
             </div>
             <script src="https://s.electerious.com/basicScroll/dist/basicScroll.min.js"></script>
             <script src="https://static.codepen.io/assets/common/stopExecutionOnTimeout-157cd5b220a5c80d4ff8e0e70ac069bffd87a61252088146915e8726e5d9f147.js"></script>
@@ -103,17 +103,13 @@
             <div class="container members">
                 <h2 id="members-title" class="d-flex d-flex justify-content-center  justify-content-center">Who are we?</h2>
                 <p class="container"> Introducing the hearts and creative minds behind our work. </p>
-                <div class="button" id="members-button">
-                    <a href="v1.5/members.html">Members</a>
-                </div>
+                <div class="button" id="members-button" onclick="window.location.href='v1.5/members.html';">Members</div>
                 <img src="assets/img/mainscrollv15/pencil.svg" class="pencil d-flex justify-content-center  justify-content-center" alt="Drawing a better future.">
                 <div class="container">
                     <h2 id="about-title" class="d-flex d-flex justify-content-center  justify-content-center">Our Story</h2>
                     <p class="container"> Learn more about our mission, values, and founding principles. </p>
                 </div>
-                <div class="button" id="about-button">
-                    <a href="v1.5/about.html">About</a>
-                </div>
+                <div class="button" id="about-button" onclick="window.location.href='v1.5/about.html';">About</div>
             </div>
         </div>
 
@@ -121,19 +117,19 @@
         <div class="projects-section">
             <div class="container projects-div">
                 <div class="row">
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/alemany15.html">
                             <img src="assets/img/mainscrollv15/alemany.svg" class="project-link" alt="Alemany Farms">
                         </a>
                     </div>
                     <div class="col-4 space">
                     </div>  
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/groupsource15.html">
                             <img src="assets/img/mainscrollv15/groupsource.svg" class="project-link" alt="Groupsource">
                         </a>
                     </div>  
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/makerspace15.html">
                             <img src="assets/img/mainscrollv15/makerspace.svg" class="project-link" alt="Moffitt Makerspace">
                         </a>
@@ -142,20 +138,21 @@
                         <div class="container">
                             <img src="assets/img/mainscrollv15/project-planet.svg" class="project-planet" alt="Exploring our recent projects.">
                         </div>
+                        <div class="button" id="projects-button" onclick="window.location.href='v1.5/projects.html';">Projects</div>
                     </div>
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/netic15.html">
                             <img src="assets/img/mainscrollv15/netic.svg" class="project-link" alt="Netic Health">
                         </a>
                     </div>  
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/bsfc15.html">
                             <img src="assets/img/mainscrollv15/bsfc.svg" class="project-link" alt="Student Food Collective">
                         </a>
                     </div>
                     <div class="col-4 space">
                     </div>  
-                    <div class="col-4 d-flex justify-content-center">
+                    <div class="project-icon col-4 d-flex justify-content-center">
                         <a href="v1.5/commcafe15.html">
                             <img src="assets/img/mainscrollv15/commcafe.svg" class="project-link" alt="Community Cafe">
                         </a>
